<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Uni21</string>
    <string name="subtitle">21st Century Studying</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Home">Home</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="TestYourself">Test Yourself</string>
    <string name="VersusMode">Versus Mode</string>
    <string name="ReviewQuestions">Review Questions</string>
    <string name="submit">Submit</string>
    <string name="ProgressMonitor">Progress Monitor</string>
    <string name="GoPremium">Go Premium</string>
    <string name="Settings">Settings</string>
    <string name="biotech">M.Sc.\nBiotechnology</string>
    <string name="biobus">B.Sc\nBiotech\nand Business</string>
    <string name="history">B.A History</string>
    <string name="biomed">M.Sc.Biomedical Science</string>
    <string name="corporateFinance">Corporate Finance</string>
    <string name="startQuiz">Start Quiz !</string>
    <string name="test_yourself">Test Yourself</string>
    <string name="_21">21</string>
    <string name="todo">TODO</string>
    <string name="review_questions">Review Questions</string>
    <string name="review_nquestions">Review\nQuestions</string>
    <string name="versus_mode">Varsus Mode</string>
    <string name="settings">Settings</string>
    <string name="progress_nmonitor">Progress\nMonitor</string>
    <string name="add_new_lecture_material">Add new lecture material</string>
    <string name="uni">Uni</string>
    <string name="select_course">Select Course</string>
    <string name="corporate_nfinance">Corporate\nFinance</string>
    <string name="regulatory_affairs">Regulatory\nAffairs</string>
    <string name="corporate_strategy">Corporate\nStrategy</string>
    <string name="food_biotechnology">Food\nBiotechnology</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="highscore_0">Highscore: 0</string>
    <string name="question_text">Here will be the question text\nHere will be the question text\nHere will be the question text</string>
    <string name="score_0">Score: 0</string>
    <string name="question_1_x">Question: 1/x</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
