<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/holo_blue_bright">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Home"
        android:textSize="32sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/holo_blue_dark">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        >

        <GridLayout
            android:id="@+id/GridLayout1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="4">

            <Button
                android:id="@+id/imageButton1"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:layout_gravity="left|top"
                android:text="@string/TestYourself"
                android:layout_margin="10dp"
                android:onClick="navigateTo"/>

            <Button
                android:id="@+id/imageButton2"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:layout_gravity="left|top"
                android:text="@string/VersusMode"
                android:layout_margin="10dp" />

            <Button
                android:id="@+id/imageButton3"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:text="@string/ReviewQuestions"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/imageButton4"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:layout_gravity="left|top"
                android:text="@string/ProgressMonitor"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/imageButton5"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:layout_gravity="left|top"
                android:text="@string/GoPremium"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/imageButton6"
                android:layout_width="160dp"
                android:layout_height="90dp"
                android:layout_gravity="left|top"
                android:text="@string/Settings"
                android:layout_margin="10dp"/>
        </GridLayout>

        </LinearLayout>

    </LinearLayout>


